# LG_Data_pipeline

./: .env.example  .gitignore  DECISIONS.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
config/: axioms.yaml  column_dictionary.yaml  form_signatures.yaml  impact_rules.yaml  narrativize_templates.yaml  normalization.yaml  query_router.yaml
config/mapping_rules/: 20col.yaml  56col.yaml  96col.yaml  v1_2.yaml
data/: demo.sqlite3
data/eval/: generation_eval.jsonl  mapping_eval.jsonl  retrieval_eval.jsonl
data/golden/: README.md
docs/: walkthrough.md  전처리_쉽게_이해하기.md
ontology/: axioms.py  models.py  v1_2_schema.json
ontology/mapping_rules/: 20col_to_v12.yaml  56col_to_v12.yaml  96col_to_v12.yaml
scripts/: build_walkthrough.py  evaluate_retriever.py  hybrid_demo.py  retrieve_test.py
src/: cli.py
src/agent/: __init__.py  agent.py  eval.py  graph.py  nodes.py  pipeline.py  schema_guided.py  state.py  tools.py
src/agent/docgen/: __init__.py  generator.py
src/agent/impact/: __init__.py  models.py  rules.py
src/agent/intent/: __init__.py  models.py  structurizer.py
src/agent/llm/: __init__.py  client.py
src/agent/orchestrator/: __init__.py  backend.py  orchestrate.py
src/agent/repository/: __init__.py  backfill.py  bom.py
src/api/: app.py
src/db/: _mapping.py  engine.py  load.py  models.py  retrieve.py  rollback.py  schema.sql  schema_dev_part_master.sql  search.py  search_simple.py
src/db/migrations/: 001_agentic_rag_additive.rollback.sql  001_agentic_rag_additive.sql
src/embed/: embedder.py  multi_vector.py  reranker.py  search.py
src/eval/: metrics.py  runner.py
src/extract/: form_classifier.py  inventory.py
src/graph/: etl.py
src/load/: loader.py  sql_schema.py
src/load/migrations/: env.py
src/og_rag/: hypergraph.py  retriever.py
src/ontology/: axioms.py  schema.json  schema.py
src/preprocess/: classify.py  column_dict.py  diff.py  extract.py  inventory.py  map.py  narrativize.py  normalize.py  pipeline.py  quarantine.py  report.py  resolve.py  validate.py
src/preprocess/adapters/: __init__.py  activity_master_meta.py  base.py  base_master_24.py  bom_ag_grid.py  changing_parts_list.py  dispatcher.py  new_parts_list_75.py  uae_dev_list.py  v1_2_template.py
src/search/: __init__.py  context_builder.py  exact_sql.py  graph_expansion.py  multi_vector_search.py  pipeline.py  router.py  trigram_search.py
src/transform/: entity_resolution.py  schema_mapper.py
src/ui/: __init__.py  _proposals_v2.py  agent_app.py  agent_client.py  app.py  chatbot_flow.py  doc_packaging.py  enrich.py  feedback_chat.py  rag_client.py  streamlit_app.py
src/utils/: audit.py  excel.py  logging.py  paths.py
tests/: conftest.py  test_adapters.py  test_agent.py  test_agent_client.py  test_agent_pipeline.py  test_agent_repository.py  test_api.py  test_classify.py  test_db.py  test_db_load.py  test_db_search.py  test_diff.py  test_docgen.py  test_embed_search.py  test_entity_resolution.py  test_eval.py  test_form_classifier.py  test_graph_etl.py  test_impact.py  test_intent.py  test_inventory.py  test_map.py  test_narrativize.py  test_normalize.py  test_ontology.py  test_orchestrator.py  test_pipeline.py  test_quarantine.py  test_rag_skeleton.py  test_report.py  test_resolve.py  test_retrieve.py  test_router.py  test_schema.py  test_schema_mapper.py  test_sql_schema.py  test_validate.py
tests/fixtures/: edge_cases.py  make_fixtures.py
