[project]
name = "lg-bom-mvp"
version = "0.1.0"
description = "LG appliance development-parts master + BOM preprocessing pipeline (MVP)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Excel / tabular
    "openpyxl>=3.1",
    "python-calamine>=0.2",
    "pandas>=2.2",
    "pyarrow>=16.0",
    # Schema / validation
    "pydantic>=2.7",
    "jsonschema>=4.22",
    "pandera>=0.20",
    # DB (Step 5)
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "pgvector>=0.3",
    # Local LLM client (light — server runs separately)
    "ollama>=0.2",
    # Entity resolution
    "rapidfuzz>=3.9",
    # CLI / logging
    "typer>=0.12",
    "rich>=13.7",
    "structlog>=24.1",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# Local embedding fallback (BGE-M3 via sentence-transformers; ~2GB). Kept
# optional per DECISIONS D-004 — Ollama serves embeddings in normal operation.
embed = [
    "sentence-transformers>=3.0",
]
# Visualization for docs/walkthrough.md (matplotlib + pillow stack).
viz = [
    "matplotlib>=3.8",
]
# Streamlit BOM Agent UI (src/ui/, 260508 통합). Optional — CLI는 ui 없이도 동작.
ui = [
    "streamlit>=1.30",
    "streamlit-float>=0.3",
    "tiktoken>=0.7",      # build_rag.py가 사용했던 토크나이저 (UI 일부가 import)
    "python-dotenv>=1.0", # 원본 rag_client가 load_dotenv 호출 — 호환 위해
]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "hypothesis>=6.100",
    "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
